# upllm

./: .gitignore  main.py  pyproject.toml
.devcontainer/: devcontainer.json
upllm/: cli.py
upllm/core/: ollama.py
upllm/providers/: provider.py  vastai.py
